--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
-    "i18next": "^23.15.1",
     "next": "14.2.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
