--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
+    "kennethparedes": "file:",
     "next": "14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
