--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lucide-react": "^0.525.0",
     "next": "14.2.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^6.5.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
